Remove condition node category, clean up templates

--- a/src/app/node/modal-addnode.html
+++ b/src/app/node/modal-addnode.html
@@ -23,10 +23,7 @@
                   <td><input id="title" type="text" placeholder="title" /></td>
                   <td>
                     <select id="category">
-                      <option value="composite">Composite</option>
-                      <option value="decorator">Decorator</option>
-                      <option value="condition">Condition</option>
-                      <option value="action" selected>Action</option>
+                      <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
                     </select>
                   </td>
                   <td><a href="#" propertyremovable class="button alert right">-</a></td>
@@ -36,10 +33,7 @@
                   <td><input id="title" type="text" placeholder="title" /></td>
                   <td>
                     <select id="category">
-                      <option value="composite">Composite</option>
-                      <option value="decorator">Decorator</option>
-                      <option value="condition">Condition</option>
-                      <option value="action" selected>Action</option>
+                      <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
                     </select>
                   </td>
                   <td><a href="#" propertyremovable class="button alert right">-</a></td>
@@ -49,10 +43,7 @@
                   <td><input id="title" type="text" placeholder="title" /></td>
                   <td>
                     <select id="category">
-                      <option value="composite">Composite</option>
-                      <option value="decorator">Decorator</option>
-                      <option value="condition">Condition</option>
-                      <option value="action" selected>Action</option>
+                      <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
                     </select>
                   </td>
                   <td><a href="#" propertyremovable class="button alert right">-</a></td>
