Strip down behavior3js dependency Rename node category to type

--- a/src/app/node/modal-addnode.html
+++ b/src/app/node/modal-addnode.html
@@ -22,8 +22,8 @@
                   <td><input id="name" type="text" placeholder="name" /></td>
                   <td><input id="title" type="text" placeholder="title" /></td>
                   <td>
-                    <select id="category">
-                      <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
+                    <select id="type">
+                      <option ng-repeat="type in types" value="{{type}}">{{type}}</option>
                     </select>
                   </td>
                   <td><a href="#" propertyremovable class="button alert right">-</a></td>
@@ -32,8 +32,8 @@
                   <td><input id="name" type="text" placeholder="name" /></td>
                   <td><input id="title" type="text" placeholder="title" /></td>
                   <td>
-                    <select id="category">
-                      <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
+                    <select id="type">
+                      <option ng-repeat="type in types" value="{{type}}">{{type}}</option>
                     </select>
                   </td>
                   <td><a href="#" propertyremovable class="button alert right">-</a></td>
@@ -42,8 +42,8 @@
                   <td><input id="name" type="text" placeholder="name" /></td>
                   <td><input id="title" type="text" placeholder="title" /></td>
                   <td>
-                    <select id="category">
-                      <option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
+                    <select id="type">
+                      <option ng-repeat="type in types" value="{{type}}">{{type}}</option>
                     </select>
                   </td>
                   <td><a href="#" propertyremovable class="button alert right">-</a></td>
