--- a/src/app/node/node.html
+++ b/src/app/node/node.html
@@ -1,9 +1,9 @@
 <div class="node-panel panel" scrollable>
   <ul class="item-list">
-    <li ng-repeat="category in categories">
-      <a class="header" href="#">{{category}}</a>
+    <li ng-repeat="type in types">
+      <a class="header" href="#">{{type}}</a>
       <ul>
-        <li ng-repeat="node in nodes[category]">
+        <li ng-repeat="node in nodes[type]">
           <a id="node-{{node.prototype.name}}" 
              href="#"
              draggable-node
@@ -13,7 +13,7 @@
             <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
           </a>
         </li>
-        <li ng-show="nodes[category].length===0">
+        <li ng-show="nodes[type].length===0">
           <span class="empty">Empty</span>
         </li>
       </ul>
