Fix import for new format

--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -25,6 +25,8 @@
           </li>
           <li class="divider"></li> -->
           <li><a ng-click ="onButtonNewTree()" href="#">New Tree<span class="shortcut">{{key_new_tree}}</span></a></li>
+          <li><a ng-click ="onButtonImportTree()" href="#">Import Tree<span class="shortcut">{{key_import_tree}}</span></a></li>
+          <li><a ng-click ="onButtonExportTree()" href="#">Export Tree<span class="shortcut">{{key_export_tree}}</span></a></li>
           <li class="divider"></li>
           <li><a ng-click="onButtonNewNode()" href="#">New Node<span class="shortcut">{{key_new_node}}</span></a></li>
         </ul>
