Replace export with save file

--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -25,8 +25,9 @@
           </li>
           <li class="divider"></li> -->
           <li><a ng-click ="onButtonNewTree()" href="#">New Tree<span class="shortcut">{{key_new_tree}}</span></a></li>
-          <li><a ng-click ="onButtonOpenTree()" href="#">Open tree...<span class="shortcut">{{key_import_tree}}</span></a></li>
-          <li><a ng-click ="onButtonExportTree()" href="#">Export Tree<span class="shortcut">{{key_export_tree}}</span></a></li>
+          <li><a ng-click ="onButtonOpenTree()" href="#">Open...<span class="shortcut">{{key_open_tree}}</span></a></li>
+          <li><a ng-click ="onButtonSaveTree()" href="#">Save<span class="shortcut">{{key_save_tree}}</span></a></li>
+          <li><a ng-click ="onButtonSaveAs()" href="#">Save As...<span class="shortcut">{{key_save_as}}</span></a></li>
           <li class="divider"></li>
           <li><a ng-click="onButtonNewNode()" href="#">New Node<span class="shortcut">{{key_new_node}}</span></a></li>
         </ul>
