--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -29,6 +29,9 @@
           <li><a ng-click ="onButtonSaveTree()" href="#">Save<span class="shortcut">{{key_save_tree}}</span></a></li>
           <li><a ng-click ="onButtonSaveAs()" href="#">Save As...<span class="shortcut">{{key_save_as}}</span></a></li>
           <li class="divider"></li>
+          <li><a ng-click ="onButtonImportNodes()" href="#">Import Nodes<span class="shortcut">{{key_import_nodes}}</span></a></li>
+          <li><a ng-click ="onButtonExportNodes()" href="#">Export Nodes<span class="shortcut">{{key_export_nodes}}</span></a></li>
+          <li class="divider"></li>
           <li><a ng-click="onButtonNewNode()" href="#">New Node<span class="shortcut">{{key_new_node}}</span></a></li>
         </ul>
       </li>
