--- a/src/app/node/modal-editnode.html
+++ b/src/app/node/modal-editnode.html
@@ -36,6 +36,28 @@
               </tbody>
             </table>
           </div>
+
+          <div class="row" id="editnode-outputs" ng-show="node.prototype.type == 'action'">
+            <label class="clearfix">
+              <span class="left">Outputs</span>
+              <a href="#" ng-click="addOutput()" class="button success right">+</a>
+            </label>
+
+            <table id="editnode-outputs-table">
+              <tbody>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="row">
+            <label>Category</label>
+            <input id="category" type="text" value="{{node.prototype.category}}" placeholder="category"/>
+          </div>
+
+          <div class="row">
+            <label>Script</label>
+            <input id="script" type="text" value="{{node.prototype.script}}" placeholder="script"/>
+          </div>
         </form>
       </div>
 
