Fix output properties

--- a/src/app/node/modal-addnode.html
+++ b/src/app/node/modal-addnode.html
@@ -39,24 +39,24 @@
             </table>
           </div>
 
-          <div class="row" id="addnode-outputs" style="display: none;">
+          <div class="row" id="addnode-output" style="display: none;">
             <label class="clearfix">
-              <span class="left">Outputs</span>
+              <span class="left">Output</span>
               <a href="#" ng-click="addOutput()" class="button success right">+</a>
             </label>
 
-            <table id="addnode-outputs-table">
+            <table id="addnode-output-table">
               <tbody>
               </tbody>
             </table>
           </div>
 
-          <div class="row">
+          <div class="row" id="addnode-category" style="display: none;">
             <label>Category</label>
             <input id="category" type="text" placeholder="category"/>
           </div>
 
-          <div class="row">
+          <div class="row" id="addnode-script" style="display: none;">
             <label>Script</label>
             <input id="script" type="text" placeholder="script"/>
           </div>
