Still allow arbitrary properties for root node

--- a/src/app/property/property.html
+++ b/src/app/property/property.html
@@ -20,6 +20,7 @@
       <div class="row">
         <label class="clearfix">
           <span class="left">Properties</span>
+          <a href="#" ng-click="addRootProperty()" ng-show="block.type == 'root'" class="button success right">+</a>
         </label>
 
         <table id="property-properties-table">
