Layout and styling changes, not necessarily prettier but less bloated

--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -1,29 +1,8 @@
 <nav class="topbar">
   <section class="left">
     <ul>
-      <li><a class="logo" href="#">Behavior3JS</a></li>
-      <li><a href="#">Project</a>
+      <li><a href="#">File</a>
         <ul>
-<!--           <li><a ng-click="" href="#">Open Project</a></li>
-          <li><a ng-click="" href="#">Save Project</a></li>
-          <li><a ng-click="" href="#">Close Project</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Import</a>
-            <ul>
-              <li><a ng-click="" href="#">Project as JSON</a></li>
-              <li><a ng-click="" href="#">Tree as JSON</a></li>
-              <li><a ng-click="" href="#">Nodes as JSON</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Export</a>
-            <ul>
-              <li><a ng-click="" href="#">Project as JSON</a></li>
-              <li><a ng-click="" href="#">Tree as JSON</a></li>
-              <li><a ng-click="" href="#">Nodes as JSON</a></li>
-              <li><a ng-click="" href="#">Nodes as Javascrip</a></li>
-            </ul>
-          </li>
-          <li class="divider"></li> -->
           <li><a ng-click ="onButtonNewTree()" href="#">New Tree<span class="shortcut">{{key_new_tree}}</span></a></li>
           <li><a ng-click ="onButtonOpenTree()" href="#">Open...<span class="shortcut">{{key_open_tree}}</span></a></li>
           <li><a ng-click ="onButtonSaveTree()" href="#">Save<span class="shortcut">{{key_save_tree}}</span></a></li>
@@ -61,23 +40,6 @@
           <li><a ng-click="onButtonSelectAll()" href="#">Select All<span class="shortcut">{{key_select_all}}</span></a></li>
           <li><a ng-click="onButtonDeselectAll()" href="#">Deselect All<span class="shortcut">{{key_deselect_all}}</span></a></li>
           <li><a ng-click="onButtonInvertSelection()" href="#">Invert Selection<span class="shortcut">{{key_invert_selection}}</span></a></li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-
-  <section class="right">
-    <ul>
-      <li><a href="#">Help</a>
-        <ul>
-          <li><a href="https://github.com/renatopp/behavior3js/wiki" target="_blank">Editor Guide</a></li>
-          <li class="divider"></li>
-          <li><a href="https://github.com/renatopp/behavior3js/wiki" target="_blank">Behavior3JS Guide</a></li>
-          <li><a href="http://docs.guineashots.com/behavior3js/" target="_blank">API</a></li>
-          <li><a href="https://github.com/renatopp/behavior3js/issues" target="_blank">Issues</a></li>
-          <li class="divider"></li>
-          <li><a href="http://guineashots.com/projects/" target="_blank">Other Projects</a></li>
-          <li><a href="http://guineashots.com" target="_blank">Guineashots</a></li>
         </ul>
       </li>
     </ul>
