Add support for parameter types and explicitly setting parameters as blackboard keys

--- a/src/app/node/modal-editnode.html
+++ b/src/app/node/modal-editnode.html
@@ -29,8 +29,13 @@
             <table id="editnode-properties-table">
               <tbody>
                   <tr ng-repeat="(key, value) in properties">
+                    <td>
+                      <select id="type">
+                        <option ng-repeat="valueType in valueTypes" ng-model="value.type" value="{{valueType.id}}" ng-selected="value.type == valueType.id">{{valueType.name}}</option>
+                      </select>
+                    </td>
                     <td><input id="key" type="text" value="{{key}}" placeholder="key" /></td>
-                    <td><input id="value" type="text" value="{{value}}" placeholder="value" /></td>
+                    <td><input id="value" type="text" value="{{value.value}}" placeholder="value" /></td>
                     <td><a href="#" propertyremovable class="button alert right">-</a></td>
                   </tr>
               </tbody>
@@ -46,8 +51,13 @@
             <table id="editnode-output-table">
               <tbody>
                   <tr ng-repeat="(key, value) in output">
+                    <td>
+                      <select id="type">
+                        <option ng-repeat="valueType in valueTypes" ng-model="value.type" value="{{valueType.id}}" ng-selected="value.type == valueType.id">{{valueType.name}}</option>
+                      </select>
+                    </td>
                     <td><input id="key" type="text" value="{{key}}" placeholder="key" /></td>
-                    <td><input id="value" type="text" value="{{value}}" placeholder="value" /></td>
+                    <td><input id="value" type="text" value="{{value.key}}" placeholder="value" /></td>
                     <td><a href="#" propertyremovable class="button alert right">-</a></td>
                   </tr>
               </tbody>
