--- a/src/app/node/node.html
+++ b/src/app/node/node.html
@@ -1,48 +1,12 @@
 <div class="node-panel panel" scrollable>
-  <ul class="item-list">
-    <li>
-      <a class="header" href="#">Composite</a>
-      <ul>
-        <li ng-repeat="node in nodes.composite">
-          <a id="node-{{node.prototype.name}}" 
-             href="#"
-             draggable-node
-             onmouseover="this.lastElementChild.style.display='inline-block';"
-             onmouseout="this.lastElementChild.style.display='none';">
-            {{getTitle(node);}}
-            <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
-          </a>
-        </li>
-        <li ng-show="nodes.composite.length===0">
-          <span class="empty">Empty</span>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <a class="header" href="#">Decorator</a>
-      <ul>
-        <li ng-repeat="node in nodes.decorator">
-          <a id="node-{{node.prototype.name}}" 
-             href="#"
-             draggable-node
-             onmouseover="this.lastElementChild.style.display='inline-block';"
-             onmouseout="this.lastElementChild.style.display='none';">
-            {{getTitle(node);}}
-            <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
-          </a>
-        </li>
-        <li ng-show="nodes.decorator.length===0">
-          <span class="empty">Empty</span>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <a class="header" href="#">Action</a>
-      <ul>
-        <li ng-repeat="(category,actions) in categories">
-          <a class="category" href="#">{{category}}</a>
+  <ul class="item-list">  <!--Temporary for now. Will be changed to a different class-->
+    <li ng-repeat="(dirName, nodesInDir) in nodes">
+      <a class="header" href="#">{{dirName}}</a>
+      <ul class="item-list">
+        <li>
+          <a class="header" href="#">Composite</a>
           <ul>
-            <li ng-repeat="node in categories[category] track by $index">
+            <li ng-repeat="node in nodesInDir.composite">
               <a id="node-{{node.prototype.name}}" 
                  href="#"
                  draggable-node
@@ -52,28 +16,69 @@
                 <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
               </a>
             </li>
+            <li ng-show="nodesInDir.composite.length===0">
+              <span class="empty">Empty</span>
+            </li>
           </ul>
         </li>
-        <li ng-show="nodes.action.length===0">
-          <span class="empty">Empty</span>
+        <li>
+          <a class="header" href="#">Decorator</a>
+          <ul>
+            <li ng-repeat="node in nodesInDir.decorator">
+              <a id="node-{{node.prototype.name}}" 
+                 href="#"
+                 draggable-node
+                 onmouseover="this.lastElementChild.style.display='inline-block';"
+                 onmouseout="this.lastElementChild.style.display='none';">
+                {{getTitle(node);}}
+                <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
+              </a>
+            </li>
+            <li ng-show="nodesInDir.decorator.length===0">
+              <span class="empty">Empty</span>
+            </li>
+          </ul>
         </li>
-      </ul>
-    </li>
-    <li>
-      <a class="header" href="#">Module</a>
-      <ul>
-        <li ng-repeat="node in nodes.module">
-          <a id="node-{{node.prototype.name}}" 
-             href="#"
-             draggable-node
-             onmouseover="this.lastElementChild.style.display='inline-block';"
-             onmouseout="this.lastElementChild.style.display='none';">
-            {{getTitle(node);}}
-            <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
-          </a>
+        <li>
+          <a class="header" href="#">Action</a>
+          <ul>
+            <li ng-repeat="(category,actions) in nodesInDir.actionCategories">
+              <a class="category" href="#">{{category}}</a>
+              <ul>
+                <li ng-repeat="node in actions track by $index">
+                  <a id="node-{{node.prototype.name}}" 
+                     href="#"
+                     draggable-node
+                     onmouseover="this.lastElementChild.style.display='inline-block';"
+                     onmouseout="this.lastElementChild.style.display='none';">
+                    {{getTitle(node);}}
+                    <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li ng-show="nodesInDir.action.length===0">
+              <span class="empty">Empty</span>
+            </li>
+          </ul>
         </li>
-        <li ng-show="nodes.module.length===0">
-          <span class="empty">Empty</span>
+        <li>
+          <a class="header" href="#">Module</a>
+          <ul>
+            <li ng-repeat="node in nodesInDir.module">
+              <a id="node-{{node.prototype.name}}" 
+                 href="#"
+                 draggable-node
+                 onmouseover="this.lastElementChild.style.display='inline-block';"
+                 onmouseout="this.lastElementChild.style.display='none';">
+                {{getTitle(node);}}
+                <button href="#" class="edit right" ng-show="canEditNode(node.prototype.name);" ng-click="showEditNodeModal(node.prototype.name)" style="display: none;">Edit</button>
+              </a>
+            </li>
+            <li ng-show="nodesInDir.module.length===0">
+              <span class="empty">Empty</span>
+            </li>
+          </ul>
         </li>
       </ul>
     </li>
