Prettify display of directory origins; minimal node exporting ability

--- a/src/app/node/node.html
+++ b/src/app/node/node.html
@@ -1,5 +1,5 @@
 <div class="node-panel panel" scrollable>
-  <ul class="item-list">  <!--Temporary for now. Will be changed to a different class-->
+  <ul class="item-list2">
     <li ng-repeat="(dirName, nodesInDir) in nodes">
       <a class="header" href="#">{{dirName}}</a>
       <ul class="item-list">
