--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -397,6 +397,69 @@ form .row input, form .row textarea, form .row select {
 
 
 /* ================================*/
+/* ITEM LIST 2                     */
+/* ================================*/
+/* Alternate variant to item-list */
+.item-list2 {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+.item-list2 li {
+  padding: 0px;
+  margin: 0px;
+}
+/* .item-list2 li ul li {
+  padding: 2px;
+  margin: 2px;
+  border: 1px solid #333333;
+} */
+.item-list2 a {
+  padding: 2px 0px 2px 10px;
+  color: #333333;
+  text-decoration: none;
+  display: block;
+}
+.item-list2 a.selected {
+  font-weight: 600;  
+  /*background-color: #606060;*/
+  /*pointer-events: none;*/
+  /*cursor: default;*/
+}
+.item-list2 .empty {
+  padding: 2px 0px 2px 10px;
+  color: #ACACAC;
+  display: block;
+}
+.item-list2 a:hover {
+  background-color: #ffffff;
+}
+.item-list2 a.header {
+  text-transform: uppercase;
+  font-weight: 600!important;
+  color: #333333;
+  font-size: 1.5em;
+  word-wrap: break-word;
+  border-color: #333333;
+  border-style: none none solid;
+}
+.item-list2 a.header:hover {
+  background-color: inherit;
+}
+.item-list2 a.category {
+  font-weight: 600;
+  color: #333333;
+  font-size: 1.1em;
+}
+.item-list2 .edit {
+  padding: 0px 5px;
+  margin: 0px 1px;
+  background-color: #ffffff;
+}
+
+/* ================================*/
 /* ITEM LIST                       */
 /* ================================*/
 .item-list, .item-list ul {
@@ -440,6 +503,7 @@ form .row input, form .row textarea, form .row select {
   font-weight: 600!important;
   color: #333333;
   font-size: 1.2em;
+  border-style: none;
 }
 .item-list a.header:hover {
   background-color: inherit;
@@ -454,8 +518,6 @@ form .row input, form .row textarea, form .row select {
   margin: 0px 1px;
   background-color: #ffffff;
 }
-
-
 
 /* ================================*/
 /*  NODEPANEL                      */
