Add ability to specify locations of nodes

--- a/src/app/node/modal-addnode.html
+++ b/src/app/node/modal-addnode.html
@@ -51,6 +51,11 @@
             </table>
           </div>
 
+          <div class="row">
+            <label>Save Location</label>
+            <input id="save-location" type="text" placeholder="save location"/>
+          </div>
+
           <div class="row" id="addnode-category" style="display: none;">
             <label>Category</label>
             <input id="category" type="text" placeholder="category"/>
