--- a/src/app/node/modal-editnode.html
+++ b/src/app/node/modal-editnode.html
@@ -42,6 +42,11 @@
             </table>
           </div>
 
+          <div class="row">
+            <label>Save Location</label>
+            <input id="save-location" type="text" placeholder="save location" value="{{node.prototype.originDirectory}}"/>
+          </div>
+
           <div class="row" id="editnode-output" ng-show="node.prototype.type == 'action'">
             <label class="clearfix">
               <span class="left">Output</span>
