--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -126,7 +126,20 @@ form .row input, form .row textarea, form .row select {
 }
 
 
-
+.filename-display {
+  font-size: 25px;
+  margin: 0px;
+  padding: 5px;
+  text-align: left;
+  position: absolute;
+  top: 25px;
+  left: 250px;  /* Required b/c the sidebar on the left will otherwise hide some of the text. */
+  width: 100%;
+  height: 25px;
+  background-color: #ffffff;
+  border-bottom: 1px solid #aaaaaa;
+  /* z-index: 100; */
+}
 
 
 /* ================================*/
@@ -223,6 +236,7 @@ form .row input, form .row textarea, form .row select {
   z-index: 50;
   top: 0px;
   background-color: #ffffff;
+  border: 1px solid #aaaaaa;
   width: 250px;
   height: 100%;
   padding-top: 40px;
