--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -104,6 +104,23 @@ button.alert:hover, .button.alert:hover {
   color: #ffffff;
 }
 
+.canvas-overlay {
+  /* A dark translucent div that covers just the game canvas (and should not block the canvas). */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:#000000;
+  opacity: 0.1;  /* Active by default. */
+  pointer-events: none;
+}
+
+.focused .canvas-overlay {
+  /* Deactivate overlay. */
+  opacity: 0.0;
+}
+
 /* ================================*/
 /* FORM                            */
 /* ================================*/
@@ -235,7 +252,7 @@ form .row input, form .row textarea, form .row select {
   position: absolute;
   z-index: 50;
   top: 0px;
-  background-color: #ffffff;
+  background-color: #f4f4f4;
   border: 1px solid #aaaaaa;
   width: 250px;
   height: 100%;
@@ -243,6 +260,9 @@ form .row input, form .row textarea, form .row select {
 }
 .sidebar.left { left: 0px; }
 .sidebar.right { right: 0px; }
+.focused .sidebar {
+  background-color: #ffffff;
+}
 /* ================================*/
 
 
